--- a/workspace_20206R/kwonjiyoung_reg/WebContent/register.html
+++ b/workspace_20206R/kwonjiyoung_reg/WebContent/register.html
@@ -11,7 +11,7 @@
 	<header>Create Your Account</header>
 	
 	<div>
-	
+		<form action="http://localhost:8000/kwonjiyoung_reg/StudentServlet?cmd=join" method="post">
 		<fieldset>
 			<legend>Personnel Information</legend>
 			<ul>
@@ -29,6 +29,7 @@
 			<input type="submit" name="submit" value="보내기">
 			<input type="reset" name="reset" value="다시 작성">
 		</fieldset>
+		</form>
 	</div>
 </body>
 </html>
